# telegram-upload-watcher

./: .gitignore  .goreleaser.yml  Dockerfile  Makefile  README.md  config.example.ini  go.mod  go.sum  justfile  pyproject.toml
go/: main.go
go/cmd/: common.go  format.go  progress.go  queue_send.go  root.go  send_files.go  send_images.go  send_message.go  send_mixed.go  version.go  watch.go
go/cmd/telegram-send-go/: main.go
go/cmd/telegram-send-go-cli/: main.go
go/gui/: app.go  main.go  run.go  send.go  wails.json
go/gui/frontend/: index.html  package-lock.json  package.json  package.json.md5  tailwind.config.cjs  tsconfig.json
go/gui/frontend/src/: App.svelte  (+2 more)
go/internal/config/: config.go
go/internal/gui/: passwords.go  settings.go
go/internal/image/: processing.go
go/internal/notify/: notify.go
go/internal/queue/: queue.go
go/internal/runcontrol/: pause.go
go/internal/sender/: sender.go
go/internal/telegram/: client.go  pool.go
go/internal/watcher/: watcher.go
go/internal/ziputil/: ziputil.go
go/pkgs/constants/: constants.go
openspec/: project.md
openspec/changes/add-go-cobra-version/: proposal.md  tasks.md
openspec/changes/add-go-implementation/: design.md  proposal.md  tasks.md
openspec/changes/add-go-wails-gui/: design.md  proposal.md  tasks.md
openspec/changes/add-multi-input-cli/: proposal.md  tasks.md
telegram_upload_watcher/: cli.py  config.py  constants.py  image_processing.py  net.py  notify.py  pools.py  queue.py  sender.py  telegram.py  watcher.py
telegram_upload_watcher/tools/: __init__.py  compress_images.py
(+32 files in other folders)
